@@ -47,47 +47,65 @@ import org.restlet.test.RestletTestCase;
  */
 public class RecipientInfoTestCase extends RestletTestCase {
 
-    public void testVia() {
-        Parameter via1a = new Parameter(HeaderConstants.HEADER_VIA,
-                "1.0 fred, 1.1 nowhere.com (Apache/1.1)");
-        Parameter via1b = new Parameter(HeaderConstants.HEADER_VIA,
-                "HTTP/1.0 fred, HTTP/1.1 nowhere.com (Apache/1.1)");
-        Parameter via1c = new Parameter(HeaderConstants.HEADER_VIA,
-                "HTTP/1.0 fred (Apache/1.1), HTTP/1.1 nowhere.com");
+	public void testVia() {
+		Parameter via1a = new Parameter(HeaderConstants.HEADER_VIA,
+				"1.0 fred, 1.1 nowhere.com (Apache/1.1)");
+		Parameter via1b = new Parameter(HeaderConstants.HEADER_VIA,
+				"HTTP/1.0 fred, HTTP/1.1 nowhere.com (Apache/1.1)");
+		Parameter via1c = new Parameter(HeaderConstants.HEADER_VIA,
+				"HTTP/1.0 fred (Apache/1.1), HTTP/1.1 nowhere.com");
+		Parameter via1d = new Parameter(HeaderConstants.HEADER_VIA,
+				"HTTP/1.0 fred (Apache/1.1), HTTP/1.1 nowhere.com:8182");
 
-        List<RecipientInfo> recipients = new ArrayList<RecipientInfo>();
-        RecipientInfoReader.addValues(via1a, recipients);
+		List<RecipientInfo> recipients = new ArrayList<RecipientInfo>();
+		RecipientInfoReader.addValues(via1a, recipients);
 
-        assertEquals(2, recipients.size());
+		assertEquals(2, recipients.size());
 
-        RecipientInfo recipient1 = recipients.get(0);
-        RecipientInfo recipient2 = recipients.get(1);
+		RecipientInfo recipient1 = recipients.get(0);
+		RecipientInfo recipient2 = recipients.get(1);
 
-        assertEquals("1.0", recipient1.getProtocol().getVersion());
-        assertEquals("1.1", recipient2.getProtocol().getVersion());
+		assertEquals("1.0", recipient1.getProtocol().getVersion());
+		assertEquals("1.1", recipient2.getProtocol().getVersion());
 
-        assertEquals("fred", recipient1.getName());
-        assertEquals("nowhere.com", recipient2.getName());
+		assertEquals("fred", recipient1.getName());
+		assertEquals("nowhere.com", recipient2.getName());
 
-        assertNull(recipient1.getComment());
-        assertEquals("Apache/1.1", recipient2.getComment());
+		assertNull(recipient1.getComment());
+		assertEquals("Apache/1.1", recipient2.getComment());
 
-        String header = RecipientInfoWriter.write(recipients);
-        assertEquals(via1b.getValue(), header);
+		String header = RecipientInfoWriter.write(recipients);
+		assertEquals(via1b.getValue(), header);
 
-        recipients = new ArrayList<RecipientInfo>();
-        RecipientInfoReader.addValues(via1c, recipients);
-        recipient1 = recipients.get(0);
-        recipient2 = recipients.get(1);
+		recipients = new ArrayList<RecipientInfo>();
+		RecipientInfoReader.addValues(via1c, recipients);
+		recipient1 = recipients.get(0);
+		recipient2 = recipients.get(1);
 
-        assertEquals("1.0", recipient1.getProtocol().getVersion());
-        assertEquals("1.1", recipient2.getProtocol().getVersion());
+		assertEquals("1.0", recipient1.getProtocol().getVersion());
+		assertEquals("1.1", recipient2.getProtocol().getVersion());
 
-        assertEquals("fred", recipient1.getName());
-        assertEquals("nowhere.com", recipient2.getName());
+		assertEquals("fred", recipient1.getName());
+		assertEquals("nowhere.com", recipient2.getName());
 
-        assertEquals("Apache/1.1", recipient1.getComment());
-        assertNull(recipient2.getComment());
+		assertEquals("Apache/1.1", recipient1.getComment());
+		assertNull(recipient2.getComment());
 
-    }
+		recipients = new ArrayList<RecipientInfo>();
+		RecipientInfoReader.addValues(via1d, recipients);
+		recipient1 = recipients.get(0);
+		recipient2 = recipients.get(1);
+
+		assertEquals("1.0", recipient1.getProtocol().getVersion());
+		assertEquals("1.1", recipient2.getProtocol().getVersion());
+
+		assertEquals("fred", recipient1.getName());
+		assertEquals("nowhere.com:8182", recipient2.getName());
+
+		assertEquals("Apache/1.1", recipient1.getComment());
+		assertNull(recipient2.getComment());
+
+		header = RecipientInfoWriter.write(recipients);
+		assertEquals(via1d.getValue(), header);
+	}
 }
