@@ -14,6 +14,8 @@ Changes log
 	     System.getProperties(). Reported by Matthias Reichl.
        - The JAXB extension now has better support for classloader.
          Contributed by Eric Hough.
+       - Fixed the writing of the Via header.
+         Reported by Guido Schmidt.
 
 - 2.0.3 (2010-11-07)
     - Bugs fixed
